@@ -2,6 +2,7 @@ Changes in version 0.1.6
 
 * logical options can have default values.
 * add `cat_strwrap` option in `qq.options()`
+* text are properly wrapped for the command message
 
 --------------------------------------------------------------------------
 
